--- a/css/styles.css
+++ b/css/styles.css
@@ -721,13 +721,13 @@ aside h3{ /*Indica ques e aplicaran estilos al elmento aide con espesificaciones
 #footer ul li a{/*Se aplicaran estilos en los id footer en los elemnto ul li*/
     display: block;/*Se trabajara elelemnto como un bloque y se utilizara todo el ancho y todo el alto */
     height: 40px;/*tendra el elemnto un alto de 40px*/
-    transition: all 300ms;
+    transition: all 300ms;/*Tendra un trasicion de 300ms*/
 }
 
-#footer ul li:hover a{
-    padding-left: 40px;
-    color: white;
-    width: 100%;
+#footer ul li:hover a{/*Se aplicara efectos al id footer del elemnto ul il cuando pase el cursor sombre el link a*/
+    padding-left: 40px;/*un margen interno de 40px al costado izquierdo*/
+    color: white;/*tendra un color blanco*/
+    width: 100%;/*Se aplicara un 100% de ancho */
 
 }
  
